--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergency Service Directory</title>
-    <link rel="stylesheet" href="index1.css">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Emergency Service Directory</title>
+<link rel="stylesheet" href="index1.css">
 </head>
 <body>
 
 <header class="navbar" role="banner">
   <div class="brand">
-    <div class="icon"><img src="assets/logo.png" alt=""></div>
+    <div class="logo-circle" aria-hidden="true">ES</div>
     <div>
       <div class="site-name">Emergency Service</div>
     </div>
@@ -18,26 +18,52 @@
 
   <div class="nav-stats" role="status" aria-live="polite">
     <div class="stat" title="Total favorites">
-      <div class="icon"><img src="assets/heart.png" alt=""></div>
+      <div class="icon"><img class="bd2" src="assets/heart.png" alt=""></div>
       <strong id="nav-heart-count">0</strong>
     </div>
     <div class="stat" title="Coins remaining">
-      <div class="icon"><img src="assets/coin.png" alt=""></div>
+      <div class="icon"><img class="bd2" src="assets/coin.png" alt=""></div>
       <strong id="nav-coin-count">100</strong>
     </div>
     <div class="stat" title="Copy count">
-      <div class="icon">copy</div>
-      <strong id="nav-copy-count"></strong>
+      <div class="icon">📋</div>
+      <strong id="nav-copy-count">2</strong>
     </div>
   </div>
 </header>
 
-
+<!-- HERO -->
 <section class="hero" aria-label="Hero section">
-  <div class="icon"><img src="assets/logo-dark.png" alt=""></div>
+  <div class="hero-logo " aria-hidden="true"><img class="bd"  src="assets/logo-dark.png" alt=""></div>
   <h1>জরুরি সেবা ডিরেক্টরি</h1>
   <p class="subtitle">Government Emergency Services at Your Fingertip — A Project by Government of the People's Republic of Bangladesh</p>
 </section>
-    
+
+<!-- MAIN -->
+<main class="container">
+  <!-- CARDS -->
+  <section>
+    <div class="cards" id="cards-container">
+      <!-- cards will be injected via JS -->
+    </div>
+  </section>
+
+  <!-- HISTORY -->
+  <aside class="history" aria-label="Call History">
+    <div class="hdr">
+      <h4>⏱️ Call History</h4>
+      <button class="clear-btn" id="clear-history">Clear</button>
+    </div>
+    <div class="history-list" id="history-list">
+      <!-- populated by JS; empty initially -->
+      <div class="muted" style="padding:8px">No calls yet.</div>
+    </div>
+  </aside>
+</main>
+
+<script src="index.js">
+
+
+</script>
 </body>
 </html>
