--- a/index1.html
+++ b/index1.html
@@ -26,8 +26,8 @@
       <strong id="nav-coin-count">100</strong>
     </div>
     <div class="stat" title="Copy count">
-      <div class="icon">📋</div>
-      <strong id="nav-copy-count">2</strong>
+      <div class="icon"></div>
+      <strong id="nav-copy-count">0</strong>
     </div>
   </div>
 </header>
