--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 
 <header class="navbar" role="banner">
   <div class="brand">
-    <div class="logo-circle" aria-hidden="true">ES</div>
+    <div class="logo-circle" aria-hidden="true"><img class="bd1" src="assets/logo.png" alt=""></div>
     <div>
       <div class="site-name">Emergency Service</div>
     </div>
