--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
       <strong id="nav-coin-count">100</strong>
     </div>
     <div class="stat" title="Copy count">
-      <div class="icon"></div>
+      <div class="icon">Copy</div>
       <strong id="nav-copy-count">0</strong>
     </div>
   </div>
@@ -51,7 +51,7 @@
   <!-- HISTORY -->
   <aside class="history" aria-label="Call History">
     <div class="hdr">
-      <h4>⏱️ Call History</h4>
+      <h4><img class="bd2" src="assets/download.png" alt=""> Call History</h4>
       <button class="clear-btn" id="clear-history">Clear</button>
     </div>
     <div class="history-list" id="history-list">
